--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtseo/module": "2.0.0-beta.15",
     "nuxt": "^3.7.4",
+    "nuxt-link-checker": "^2.1.9",
+    "nuxt-og-image": "^2.1.2",
+    "nuxt-schema-org": "^3.0.1",
+    "nuxt-seo-experiments": "^3.1.5",
+    "nuxt-simple-robots": "^3.1.6",
+    "nuxt-simple-sitemap": "^3.4.0",
+    "nuxt-site-config": "^1.5.4",
+    "nuxt-site-config-kit": "^1.5.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuetify-nuxt-module": "^0.5.14"
