--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuetify-nuxt-module": "^0.5.14"
+  },
+  "dependencies": {
+    "chart.js": "^4.4.0",
+    "vue-chartjs": "^5.2.0"
   }
 }
